# zig.toolchain.cmake

./: .gitignore  README.md  README_zh.md  build.zig  zig.toolchain.cmake
.github/workflows/: release.yml  test.yml
test/: CMakeLists.txt  resource.rc
test/include/: shared_lib.h  static_lib.h
test/src/: main.c  main.cpp  shared_lib.c  shared_lib.cpp  static_lib.c  static_lib.cpp
tests/c_demo/: CMakeLists.txt  main.c
tests/cpp_demo/: CMakeLists.txt  main.cpp
tests/shared_lib/: CMakeLists.txt  lib.c  main.c
tests/shared_lib/include/: lib.h
tests/static_lib/: CMakeLists.txt  lib.c  main.c
tests/static_lib/include/: lib.h
tests/windows_rc/: CMakeLists.txt  main.c  resource.rc
